# serve-here

./: .gitignore  LICENSE  README.md  package.json
.github/workflows/: cd.yml  ci.yml
docs/: release-template.md
e2e/: webui.spec.js
npm/: package.json.tmpl
npm/serve-here/: package.json
scripts/: generate-release-notes.sh  prepare-release.sh  release-all.sh
src/: server.js
src-rust/: Cargo.toml
src-rust/src/: daemon.rs  error.rs  format.rs  handler.rs  listing.rs  main.rs  metrics.rs  network.rs  server.rs  stats.rs
