[package]
name = "serve-here"
version = "2.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/chenpu17/serve-here"
description = "A minimal CLI to serve static files from a directory over HTTP"
authors = ["Chen Pu"]

[[bin]]
name = "serve-here"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
clap = { version = "4", features = ["derive"] }
mime_guess = "2"
html-escape = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
chrono = "0.4"
urlencoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"

[target.'cfg(unix)'.dependencies]
local-ip-address = "0.6"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
local-ip-address = "0.6"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tempfile = "3"
